--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,16 +12,16 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.mcdull.githubapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_trending_topics"
+        android:name="com.mcdull.githubapp.ui.trending.TrendingTopicsFragment"
+        android:label="@string/title_trending_topics"
+        tools:layout="@layout/fragment_trending_topics" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.mcdull.githubapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_search"
+        android:name="com.mcdull.githubapp.ui.search.SearchFragment"
+        android:label="@string/title_search"
+        tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.mcdull.githubapp.ui.profile.ProfileFragment"
