--- a/app/src/main/res/drawable/ic_fork.xml
+++ b/app/src/main/res/drawable/ic_fork.xml
@@ -4,14 +4,21 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,2c-0.55,0-1,0.45-1,1v1c0,0.55,0.45,1,1,1s1-0.45,1-1V3C13,2.45,12.55,2,12,2z M19,12
-        c-0.55,0-1,0.45-1,1v1c0,0.55,0.45,1,1,1s1-0.45,1-1v-1C20,12.45,19.55,12,19,12z M5,12c-0.55,0-1,0.45-1,1v1c0,0.55,0.45,1,1,1
-        s1-0.45,1-1v-1C6,12.45,5.55,12,5,12z M12,20c-0.55,0-1,0.45-1,1v1c0,0.55,0.45,1,1,1s1-0.45,1-1v-1C13,20.45,12.55,20,12,20z
-        M16.59,5.41L17.17,6c0.39,0.39,0.39,1.02,0,1.41l-0.59,0.59c-0.39,0.39-1.02,0.39-1.41,0l-0.59-0.59c-0.39-0.39-0.39-1.02,0-1.41
-        l0.59-0.59C15.57,5.02,16.2,5.02,16.59,5.41z M7.05,14.05l0.59,0.59c0.39,0.39,0.39,1.02,0,1.41l-0.59,0.59
-        c-0.39,0.39-1.02,0.39-1.41,0l-0.59-0.59c-0.39-0.39-0.39-1.02,0-1.41l0.59-0.59C6.02,13.66,6.66,13.66,7.05,14.05z M16.59,16.59
-        l0.59,0.59c0.39,0.39,0.39,1.02,0,1.41l-0.59,0.59c-0.39,0.39-1.02,0.39-1.41,0l-0.59-0.59c-0.39-0.39-0.39-1.02,0-1.41
-        l0.59-0.59C15.57,16.2,16.2,16.2,16.59,16.59z M7.05,7.05l0.59,0.59c0.39,0.39,0.39,1.02,0,1.41l-0.59,0.59
-        c-0.39,0.39-1.02,0.39-1.41,0L5.64,9.05c-0.39-0.39-0.39-1.02,0-1.41l0.59-0.59C6.02,6.66,6.66,6.66,7.05,7.05z"/>
+        android:pathData="m17.414,11.414 l-0.53,-0.53zM18.75,8c0,-0.414 -0.336,-0.75 -0.75,-0.75s-0.75,0.336 -0.75,0.75zM6.75,8c0,-0.414 -0.336,-0.75 -0.75,-0.75s-0.75,0.336 -0.75,0.75zM6.586,11.414 L6.055,11.944zM12.75,12c0,-0.414 -0.336,-0.75 -0.75,-0.75s-0.75,0.336 -0.75,0.75zM11.25,16c0,0.414 0.336,0.75 0.75,0.75s0.75,-0.336 0.75,-0.75zM10,12.75h4v-1.5h-4zM14,12.75c0.922,0 1.688,0.002 2.295,-0.08 0.628,-0.084 1.195,-0.27 1.65,-0.726l-1.061,-1.061c-0.13,0.13 -0.328,0.237 -0.789,0.3 -0.483,0.065 -1.131,0.067 -2.095,0.067zM17.25,8c0,0.964 -0.002,1.612 -0.067,2.095 -0.062,0.461 -0.169,0.659 -0.3,0.789l1.061,1.061c0.456,-0.455 0.641,-1.022 0.726,-1.65 0.082,-0.606 0.08,-1.373 0.08,-2.295zM5.25,8c0,0.922 -0.002,1.688 0.08,2.295 0.084,0.628 0.27,1.195 0.726,1.65l1.061,-1.061c-0.13,-0.13 -0.238,-0.328 -0.3,-0.789 -0.065,-0.483 -0.067,-1.131 -0.067,-2.095zM10,11.25c-0.964,0 -1.612,-0.002 -2.095,-0.067 -0.461,-0.062 -0.659,-0.169 -0.789,-0.3l-1.061,1.061c0.455,0.456 1.022,0.641 1.65,0.726 0.606,0.082 1.373,0.08 2.294,0.08zM11.25,12v4h1.5v-4z"
+        android:fillColor="#141b34"/>
+    <path
+        android:pathData="M6,6m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#141b34"/>
+    <path
+        android:pathData="M12,18m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#141b34"/>
+    <path
+        android:pathData="M18,6m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#141b34"/>
 </vector>
